# masteraft

./: .gitignore  Makefile  README.md  b.json  c.json  d.json
config/: config.json
proto/: client.proto  rpc.proto
src/: common.hpp  http_status_server.hpp  main.cpp  raft_server.hpp  template.hpp
web-viewer/raft-states/: README.md  package-lock.json  package.json
web-viewer/raft-states/public/: index.html
web-viewer/raft-states/src/: App.vue
web-viewer/raft-states/src/components/: index.vue
worker/: CMakeLists.txt  Makefile
worker/src/: basic_connection.hpp  common.hpp  http_connection.hpp  http_status_server.hpp  main.cpp  raft_server.hpp  raft_state.hpp  rpc_connection.hpp  rpc_server.hpp  server_configs.hpp  utils.hpp
worker/src/config/: config.json
worker/src/proto/: rpc.proto
worker/worker_bin.dSYM/Contents/: Info.plist
